--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,3 +59,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.preventSelect {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
